Deployments/easynotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easynotes-deployment
  labels:
    role: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
      - name: easynotes
        image: msalmansaeedch786/easynotesrepo:latest
        ports:
        - containerPort: 3000
      restartPolicy: Always
