Deployments/easynotes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easynotes-service
spec:
  selector:
    app: easynotes
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
